--- a/hangman.html
+++ b/hangman.html
@@ -276,9 +276,9 @@
 
           
           let resultBox=document.getElementById("result");
-            let images={3:`<img src="./hangman/frame.jpg" class="image1">`,
-                        2:`<img src="./hangman/noose.jpg" class="image2">`,
-                        1:`<img src="./hangman/body01-head.png" class="image3">`
+            let images={3:`<img src="./frame.jpg" class="image1">`,
+                        2:`<img src="./noose.jpg" class="image2">`,
+                        1:`<img src="./body01-head.png" class="image3">`
         }
         }
     </script>
